# magic-file

./: Cargo.toml
scripts/: test_aux_line.py
src/: expr.rs  expr_value.rs  ext_buf.rs  magic.rs  magic_entry.rs  magic_file.rs  magic_line.rs  magic_line_parse.rs  magic_match.rs  magic_match_ascii.rs  magic_match_filesystem.rs  magic_match_json.rs  magic_match_softmagic.rs  magic_match_tar.rs  magic_param.rs  main.rs  parse_magic_aux_line.rs  parse_magic_entry.rs  parse_magic_line.rs  raw_bytes.rs  str_utils.rs  tree.rs
