[package]
name = "file-type"
version = "0.1.0"
authors = ["gengwangli <limo.iie4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bitflags = { version = "1.2.1" }
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
